theme.css
/* ... */
.markdown-embed-link {
  margin: 4px;
}

.markdown-embed-content.node-insert-event .callout {
  margin-top: 0.3em !important;
  margin-bottom: 0.3em !important;
}

.markdown-preview-view .markdown-embed {
  margin-right: -7px !important;
}

.markdown-preview-view .markdown-embed .markdown-embed-link {
  margin-right: 12px;
}

/* end fixes for strange embed padding */

/* remove blockquote-like border on embeds in preview mode */
body {
  --embed-border-left: none !important;
}

/* standardize callout icon width and center items */
.callout-icon {
  width: 20px;
}

.callout-icon svg {
  margin: auto;
}

/* slightly reduce left side padding of callout to counter new icon width */
/* default is var(--size-4-3) var(--size-4-3) var(--size-4-3) var(--size-4-6) */
body {
  --callout-padding: var(--size-4-3) var(--size-4-3) var(--size-4-3) var(--size-4-5);
}

/* adjust padding of task/checkbox lists inside callouts */
.callout-content ul.contains-task-list {
  padding-left: 0;
  padding-top: var(--size-4-1);
}

/* remove trailing bottom margin on codeblock-type admonitions */
.is-live-preview .admonition-content:last-child {
  margin-bottom: 0;
}

/* fix code background color in callouts */
body {
  --code-background: var(--default-codeblock);
  --callout-blend-mode: normal !important; /* for nested callouts */
}

/* fix for Obsidian 1.5 indent change */
/* removes additional indent from checkbox, bullet point, and enumeration lines */

.cm-formatting-list-ul,
.cm-formatting-list-ol {
  padding-inline-start: 0;
}

.markdown-source-view.mod-cm6 .task-list-item-checkbox {
  margin-inline-start: 0.25em;
}

[class*="HyperMD-list-line"] > .cm-fold-indicator {
  position: absolute;
  translate: -0.5em;
}

/* begin fixes for "editing unordered list bullet point causes 4px padding decrease" */
/* this kind of visual fix isn't feasible for checkboxes */
/* this fix is unnecessary for and does not affect ordered/numbered lists */
.HyperMD-list-line[class*="HyperMD-list-line-"].cm-line > span.cm-formatting.cm-formatting-list-ul[class*="cm-list-"]:not(:has(span.list-bullet)) {
  display: inline-block;
  padding-left: 3px;
  padding-right: 1px;
  min-width: 1em;
}
/* end fixes for "editing unordered list bullet point causes 4px padding decrease" */

/* reduce image border radius */
body {
  --img-border-radius: 2px !important;
}

